misc4.0/argo-rollouts-istio/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: nginx-canary
spec:
  selector:
    app: nginx
  ports:
    - protocol: TCP
      port: 80
      targetPort: 8080
---
apiVersion: v1
kind: Service
metadata:
  name: nginx-stable
spec:
  selector:
    app: nginx
  ports:
    - protocol: TCP
      port: 80
      targetPort: 8080
